Attempt to fix fishes going out of boundary yet again

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ footer {
     width: 40px;
     height: 40px;
     /*background-color:coral;*/
-    position: relative;
+    position: absolute;
 }
 
 .fish svg {
